[package]
name = "hs-door-proxy"
version = "0.1.0"
authors = ["Tiago Nascimento <tiago.nascimento@spruceid.com>"]
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["sqlite_pool"] }
sha2 = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4"
argon2 = "0.3"
totp-lite = "1.0"
anyhow = "1"
